@@ -34,6 +34,7 @@ version <next>:
 - Non-Local Means (nlmeans) denoising filter
 - sdl2 output device
 - sdl2 support for ffplay
+- sdl1 output device and sdl1 support removed
 
 
 version 3.1:
